--- a/about.css
+++ b/about.css
@@ -47,5 +47,12 @@ nav ul li a:hover{
     color: darkblue;
 }
 .poto{
-    margin-left: 100;
+    margin-top: 7%;
+    margin-left: 40%;
+    margin-bottom: -0.25%;
+}
+.potogrup{
+    margin-top: 0;
+    margin-left: 0;
+    background: lightblue;
 }
