adding bg-color

--- a/learning/style/form.css
+++ b/learning/style/form.css
@@ -5,5 +5,5 @@
 body{
     width: 100vw;
     height: 100vh;
-    background: linear-gradient(to top left, #82bdfd, #0838);
+    background: linear-gradient( #fff, #000);
 }
