--- a/learning/style/form.css
+++ b/learning/style/form.css
@@ -25,7 +25,7 @@ fieldset{
 legend{
     font-weight: bold;
     color: #fff;
-    background-color: #0088cc;
+    background-color: #475;
     padding: 15px 48px;
     margin-left: 50px;
     margin-bottom: 40px;
@@ -38,7 +38,10 @@ legend{
     padding: 10px;
     box-sizing: border-box;
 }
-
+input, label{
+    padding: 16px;
+    border-radius: 10px;
+}
 
 
 /* GRADIENT ANIMATION */
