--- a/learning/style/form.css
+++ b/learning/style/form.css
@@ -17,6 +17,8 @@ body{
 .container{
     width: 40%;
     height: 60%;
+    display: flex;
+    flex-direction: column;
     /* background: #fff; */
 }
 fieldset{
@@ -26,10 +28,10 @@ legend{
     font-weight: bold;
     color: #fff;
     background-color: #475;
-    padding: 15px 48px;
-    margin-left: 50px;
+    padding: 15px 120px;
+    margin-left: 120px;
     margin-bottom: 40px;
-    border-radius: 100px;
+    border-radius: 10px;
 }
 .form-group{
     width: 100%;
