--- a/learning/style/form.css
+++ b/learning/style/form.css
@@ -16,13 +16,15 @@ body{
 
 .container{
     width: 40%;
-    height: 60%;
+
     display: flex;
     flex-direction: column;
     /* background: #fff; */
 }
 fieldset{
     background: azure;
+    border: none;
+    border-radius: 16px;
 }
 legend{
     font-weight: bold;
@@ -30,7 +32,7 @@ legend{
     background-color: #475;
     padding: 15px 120px;
     margin-left: 120px;
-    margin-bottom: 40px;
+    margin-bottom: 24px;
     border-radius: 10px;
 }
 .form-group{
@@ -41,8 +43,28 @@ legend{
     box-sizing: border-box;
 }
 input, label{
-    padding: 16px;
+    padding: 13px;
     border-radius: 10px;
+}
+input{
+    background: none;
+    border: none;
+    border-bottom: solid #000;
+    border-radius: 0;
+}
+.btn-login{
+    background-color: #475;
+    padding: 13px;
+    border: none;
+    border-radius: 100px;
+    color: white;
+    font-weight: bold;
+    margin-top: 19px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+.btn-login:hover{
+    background-color: rgba(68, 119, 85, 0.809);
 }
 
 
